--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "new-project",
+  "name": "four-card-feature-section",
   "version": "1.0.0",
-  "description": "this is a new project",
+  "description": "this is a frontend mentor challenge",
   "scripts": {
     "dev": "parcel src/index.html",
     "build": "parcel build src/index.html",
